--- a/material.layout.scss
+++ b/material.layout.scss
@@ -1,31 +1,253 @@
-
-
 /* flex container */
 body {  
-    margin: 10px;
+    margin: 0px;
 
     display: flex;
     flex-direction: column;
-    align-items: center;
 
 }
 
 header {
-    margin-top: -10px;
+    margin-top: 0px;
 
     flex: 1;
-
 }
 
-#content {
-    margin: 70px 10px 0px 10px;
-
-}
-
-.item {
+#jumbotron {
+  margin: -10px 0px 0px 0px;
+  
+  .demo-card {
     margin-top: 10px;
 
-    flex-shrink: 1;
+
+    width: 100%;
+    color: $mdc-theme-on-surface;
+    background-color: $mdc-theme-secondary-200;
+  }
+
+  .demo-card__primary {
+    padding: 1rem;
+  }
+
+  .demo-card__title,
+  .demo-card__subtitle {
+    margin: 0;
+  }
+
+  .demo-card__secondary {
+    margin-top: 10px;
+    padding: 0 1rem 8px;
+    opacity: 0.87;
+  }  
+
+  // .mdc-button {
+  //   @include mdc-button-filled-accessible($mdc-theme-primary-A700);
+  // }    
+}
+
+
+#howItWorks {
+    margin-top: 10px;
+
+}
+
+#valueProposition {
+  margin: 0px 5px 0px 0px;
+  
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+
+  .demo-card {
+    margin-top: 10px;
+    margin-left: 0.5rem;
+
+    height: 400px;
+    width: 170px;
+    color: $mdc-theme-on-surface;
+    @include mdc-card-fill-color($mdc-theme-secondary-50);
+    // @include mdc-card-outline($mdc-theme-on-surface, 0.02rem);
+  }
+
+  .demo-card__primary {
+    padding: 1rem;
+    opacity: 0.87;
+
+    font-weight: 1.1rem;
+  }
+
+  .demo-card__title,
+  .demo-card__subtitle {
+    margin: 0;
+
+  }
+
+  .demo-card__secondary {
+    margin-top: 10px;
+    padding: 0 1rem 8px;
+    opacity: 0.87;
+
+    font-weight: 1.1rem;
+
+    text-align: center;
+  }  
+
+  .mdc-card__actions {
+    justify-content: center;
+  }
+
+  // .mdc-button {
+  //   @include mdc-button-filled-accessible($mdc-theme-primary-A700);
+  // }    
+}
+
+#achievements {
+  height: 100px;
+}
+
+#ourCustomers {
+  margin-top: 10px;
+  background-color: darkslategray;
+
+  .ourCustomerList {
+    display: flex;
+    justify-content: space-evenly;
+  }
+}
+
+
+
+#requestDemo {
+  margin: -10px 0px 0px 0px;
+  
+  .demo-card {
+    margin-top: 10px;
+
+
+    width: 100%;
+    color: $mdc-theme-on-surface;
+    background-color: $mdc-theme-secondary-200;
+  }
+
+  .demo-card__primary {
+    padding: 1rem;
+  }
+
+  .demo-card__title,
+  .demo-card__subtitle {
+    margin: 0;
+  }
+
+  .demo-card__secondary {
+    margin-top: 10px;
+    padding: 0 1rem 8px;
+    opacity: 0.87;
+
+    font-weight: 1.1rem;
+
+    text-align: center;
+  }  
+
+  .mdc-card__actions {
+    justify-content: center;
+  }
+
+  // .mdc-button {
+  //   @include mdc-button-filled-accessible($mdc-theme-primary-A700);
+  // }    
+}
+
+#pricing {
+
+
+  margin: 10px 5px 0px 0px;
+  
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+
+  .demo-card {
+    margin-top: 10px;
+    margin-left: 0.5rem;
+
+    height: 400px;
+    width: 170px;
+    color: $mdc-theme-on-surface;
+    // @include mdc-card-fill-color($mdc-theme-secondary-50);
+    // @include mdc-card-outline($mdc-theme-on-surface, 0.02rem);
+  }
+
+  .demo-card__primary {
+    padding: 1rem;
+    opacity: 0.87;
+
+    font-weight: 1.1rem;
+  }
+
+  .demo-card__title,
+  .demo-card__subtitle {
+    margin: 0;
+
+  }
+
+  .demo-card__secondary {
+    margin-top: 10px;
+    padding: 0 1rem 8px;
+    opacity: 0.87;
+
+    font-weight: 1.1rem;
+
+    text-align: center;
+  }  
+
+  .mdc-card__actions {
+    justify-content: center;
+  }
+
+  // .mdc-button {
+  //   @include mdc-button-filled-accessible($mdc-theme-primary-A700);
+  // } 
+}
+
+footer {
+    direction: rtl;
+    min-height: 80px;
+
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+
+    .bottom {
+      width: 100%;
+      background-color:#5f6368;
+      .social {
+        height: 1px;
+        border-bottom: 1px solid rgba(155,155,155,.4);
+      }
+
+      .disclaimer {
+        
+
+        p {
+          padding-right: 0.5rem;
+    
+          color:#fff;
+          font-size: 0.75rem;
+          line-height: 18px;
+          text-align: right;
+    
+          width: 100%;
+        }
+    
+        a {
+          color: #fff;
+          text-decoration: none;
+          background-color: transparent;
+        }
+      }
+    }
+
+
 }
 
 /* Browser Upgrade Prompt */
@@ -34,5 +256,5 @@ header {
     background: #ccc;
     color: #000;
     padding: 0.2em 0;
-  }  
+}  
 
