--- a/material.components.scss
+++ b/material.components.scss
@@ -57,7 +57,7 @@ p {
 
     max-width: fit-content;
     // max-height: 600px;
-    margin: 0;
+    margin: 0px;
 }
 
 #howItWorks .mdc-image-list {
@@ -65,5 +65,5 @@ p {
 
     // max-width: fit-content;
     // max-height: 600px;
-    margin: 0;
+    margin: 0px;
 }
