--- a/material.layout.scss
+++ b/material.layout.scss
@@ -31,7 +31,7 @@ header {
 
   .demo-card__title,
   .demo-card__subtitle {
-    margin: 0;
+    margin: 0px;
   }
 
   .demo-card__secondary {
@@ -52,7 +52,6 @@ header {
 }
 
 #valueProposition {
-  margin: 0px 5px 0px 0px;
   
   display: flex;
   flex-flow: row wrap;
@@ -60,7 +59,6 @@ header {
 
   .demo-card {
     margin-top: 10px;
-    margin-left: 0.5rem;
 
     height: 400px;
     width: 170px;
@@ -78,7 +76,7 @@ header {
 
   .demo-card__title,
   .demo-card__subtitle {
-    margin: 0;
+    margin: 0px;
 
   }
 
@@ -135,7 +133,7 @@ header {
 
   .demo-card__title,
   .demo-card__subtitle {
-    margin: 0;
+    margin: 0px;
   }
 
   .demo-card__secondary {
@@ -159,8 +157,7 @@ header {
 
 #pricing {
 
-
-  margin: 10px 5px 0px 0px;
+  margin: 10px 0px 0px 0px;
   
   display: flex;
   flex-flow: row wrap;
@@ -168,7 +165,6 @@ header {
 
   .demo-card {
     margin-top: 10px;
-    margin-left: 0.5rem;
 
     height: 400px;
     width: 170px;
@@ -186,7 +182,7 @@ header {
 
   .demo-card__title,
   .demo-card__subtitle {
-    margin: 0;
+    margin: 0px;
 
   }
 
@@ -252,9 +248,9 @@ footer {
 
 /* Browser Upgrade Prompt */
 .browserupgrade {
-    margin: 0.2em 0;
+    margin: 0.2em;
     background: #ccc;
     color: #000;
-    padding: 0.2em 0;
+    padding: 0.2em;
 }  
 
